[gd_scene load_steps=8 format=3 uid="uid://cg5wrwwahia15"]

[ext_resource type="Script" uid="uid://ghwp6qghjmgb" path="res://Scenes/Level1/level_1.gd" id="1_pylp5"]
[ext_resource type="PackedScene" uid="uid://bkiom600l0aa6" path="res://Scenes/Player/player.tscn" id="2_iyse3"]
[ext_resource type="PackedScene" uid="uid://xcbhh04btsa7" path="res://Scenes/GameInterface/game_interface.tscn" id="3_la6op"]
[ext_resource type="PackedScene" uid="uid://dng6dd8hxc7xm" path="res://Scenes/fence.tscn" id="3_ojcjo"]
[ext_resource type="PackedScene" uid="uid://cu4nq7khuo13p" path="res://Scenes/PauseMenu/pause_menu.tscn" id="4_0q28u"]
[ext_resource type="PackedScene" uid="uid://cxc4xnt4ygwdb" path="res://Scenes/crate_medium.tscn" id="4_cirk1"]
[ext_resource type="PackedScene" uid="uid://bo8uw4okbm14n" path="res://Scenes/guard.tscn" id="5_6bneh"]

[node name="Level1" type="Node2D"]
process_mode = 3
script = ExtResource("1_pylp5")

[node name="Player" parent="." instance=ExtResource("2_iyse3")]
process_mode = 1
position = Vector2(635, 734)
walking_speed = 300.0

[node name="GameObjects" type="Node2D" parent="."]
process_mode = 1
scale = Vector2(10, 10)

[node name="first_level" type="Node2D" parent="GameObjects"]
scale = Vector2(0.99999994, 0.99999994)

[node name="first_level_border" type="Node2D" parent="GameObjects/first_level"]
position = Vector2(36.000004, 0)
scale = Vector2(1.0000001, 1.0000001)

[node name="fence" parent="GameObjects/first_level/first_level_border" instance=ExtResource("3_ojcjo")]
position = Vector2(34.400005, 7.8)
scale = Vector2(0.99999994, 0.99999994)

[node name="fence2" parent="GameObjects/first_level/first_level_border" instance=ExtResource("3_ojcjo")]
position = Vector2(5.4000006, 42.800007)
rotation = 1.5707964

[node name="fence3" parent="GameObjects/first_level/first_level_border" instance=ExtResource("3_ojcjo")]
position = Vector2(34.400005, 140.2)
scale = Vector2(0.99999976, 0.99999976)

[node name="fence4" parent="GameObjects/first_level/first_level_border" instance=ExtResource("3_ojcjo")]
position = Vector2(5.3999987, 105.299995)
rotation = 1.5707964
scale = Vector2(0.99999994, 0.99999994)

[node name="fence5" parent="GameObjects/first_level/first_level_border" instance=ExtResource("3_ojcjo")]
position = Vector2(98.399994, 140.19998)

[node name="fence6" parent="GameObjects/first_level/first_level_border" instance=ExtResource("3_ojcjo")]
position = Vector2(98.20001, 7.7)

[node name="fence7" parent="GameObjects/first_level/first_level_border" instance=ExtResource("3_ojcjo")]
position = Vector2(162.2, 7.6999993)

[node name="fence8" parent="GameObjects/first_level/first_level_border" instance=ExtResource("3_ojcjo")]
position = Vector2(162.4, 140.2)

[node name="fence9" parent="GameObjects/first_level/first_level_border" instance=ExtResource("3_ojcjo")]
position = Vector2(225.79997, 140.19998)

[node name="fence10" parent="GameObjects/first_level/first_level_border" instance=ExtResource("3_ojcjo")]
position = Vector2(225.90001, 7.7000003)

[node name="second_level" type="Node2D" parent="GameObjects"]

[node name="second_level_border" type="Node2D" parent="GameObjects/second_level"]
position = Vector2(257.79996, 0.7)
scale = Vector2(0.99999994, 0.99999994)

[node name="fence" parent="GameObjects/second_level/second_level_border" instance=ExtResource("3_ojcjo")]
position = Vector2(67.600006, 7.1000004)
scale = Vector2(0.99999994, 0.99999994)

[node name="fence3" parent="GameObjects/second_level/second_level_border" instance=ExtResource("3_ojcjo")]
position = Vector2(67.600006, 139.5)
scale = Vector2(0.99999976, 0.99999976)

[node name="fence5" parent="GameObjects/second_level/second_level_border" instance=ExtResource("3_ojcjo")]
position = Vector2(131.59999, 139.49998)

[node name="fence6" parent="GameObjects/second_level/second_level_border" instance=ExtResource("3_ojcjo")]
position = Vector2(131.40001, 7)

[node name="fence7" parent="GameObjects/second_level/second_level_border" instance=ExtResource("3_ojcjo")]
position = Vector2(195.4, 6.9999995)

[node name="fence8" parent="GameObjects/second_level/second_level_border" instance=ExtResource("3_ojcjo")]
position = Vector2(195.59999, 139.5)

[node name="fence9" parent="GameObjects/second_level/second_level_border" instance=ExtResource("3_ojcjo")]
position = Vector2(258.99997, 139.49998)

[node name="fence10" parent="GameObjects/second_level/second_level_border" instance=ExtResource("3_ojcjo")]
position = Vector2(259.1, 7.0000005)

[node name="crate_medium" parent="GameObjects/second_level" instance=ExtResource("4_cirk1")]
position = Vector2(377.09995, 49.000015)
rotation = -0.6632251
scale = Vector2(2, 2)

[node name="crate_medium2" parent="GameObjects/second_level" instance=ExtResource("4_cirk1")]
position = Vector2(437.09998, 113.700005)
scale = Vector2(2, 2)

[node name="crate_medium3" parent="GameObjects/second_level" instance=ExtResource("4_cirk1")]
position = Vector2(494.50006, 41.000004)
scale = Vector2(2.5, 2.5)

[node name="guard" parent="GameObjects/second_level" instance=ExtResource("5_6bneh")]
position = Vector2(511, 82.59999)
scale = Vector2(0.3, 0.3)

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3

[node name="GameInterface" parent="UI" instance=ExtResource("3_la6op")]
visible = false

[node name="PauseMenu" parent="UI" instance=ExtResource("4_0q28u")]
visible = false

[connection signal="escape" from="UI/GameInterface" to="." method="_on_game_interface_escape"]
[connection signal="rotate_left" from="UI/GameInterface" to="." method="_on_game_interface_rotate_left"]
[connection signal="rotate_right" from="UI/GameInterface" to="." method="_on_game_interface_rotate_right"]
[connection signal="stop" from="UI/GameInterface" to="." method="_on_game_interface_stop"]
[connection signal="walk_forward" from="UI/GameInterface" to="." method="_on_game_interface_walk_forward"]
[connection signal="continue_game" from="UI/PauseMenu" to="." method="_on_pause_menu_continue_game"]
[connection signal="return_to_menu" from="UI/PauseMenu" to="." method="_on_pause_menu_return_to_menu"]
